# xwmt

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
ci/: environment.yml
conventions/: MOM6.yaml
docs/: environment.yml  requirements.txt
docs/source/: api.rst  conf.py  contrib.rst  index.rst  install.rst  objective.rst
examples/: 1_interior_transformations.ipynb  2_surface_transformations.ipynb  3_surface_transformations_legacy.ipynb  MOM6_num_mixing.yaml  basic_xwmt_tutorial.ipynb  benchmarking_transformations.ipynb  full3D_tutorial.ipynb  load_example_model_grid.py  surface2D_tutorial.ipynb
notebooks/: basic_xwmt_tutorial.ipynb  testing.ipynb  testing_examples.ipynb  xwmt_full_3D_WMT_tutorial.ipynb  xwmt_swmt_script.ipynb  xwmt_tutorial_surface_wmt_CM4.ipynb  xwmt_tutorial_surface_wmt_CM4_update.ipynb
tests/: test_functional.py  test_functional_3d.py
xwmt/: __init__.py  compute.py  preprocessing.py  swmt.py  version.py  watermass.py  wm.py  wmt.py
xwmt/tests/: conftest.py  test_convergence_to_analytical.py  test_functional.py  test_integrate_transformations.py
