[project]
name = "xwmt"
dynamic = ["version"]
authors = [
    {name="Jan-Erik Tesdal", email="jt7058@princeton.edu"},
    {name="Henri F. Drake", email="hfdrake@uci.edu"}
]
description = "Water Mass Transformation Routines for xarray"
keywords = [
    "oceanography",
    "ocean modeling",
    "water mass transformation"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha"
    "Intended Audience :: Science/Research"
    "Topic :: Scientific/Engineering"
    "License :: OSI Approved :: MIT License"
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "gsw",
    "numba",
    "numpy",
    "pandas",
    "xarray",
    "xhistogram",
    "xgcm @ git+https://github.com/xgcm/xgcm.git@7492277de22ed1e677a6a7523b61b20643a98a77",
]

[project.urls]
"Homepage" = "https://github.com/NOAA-GFDL/xwmt"
"Bugs/Issues/Features" = "https://github.com/NOAA-GFDL/xwmt/issues"
"Related package" = "https://github.com/hdrake/xwmb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "xwmt/version.py"