[metadata]
name = xwmt
description = Water Mass Transformation Routines for xarray
url = https://github.com/jetesdal/xwmt
author = Jan-Erik Tesdal
author_email = jt7058@princeton.edu
keywords = oceanography ocean modeling water mass transformation
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **xWMT** is a Python package that provides a framework for calculating
    water mass tranformations in an xarray-based environment.

    More Information
    ----------------
    - Source code: `<http://github.com/jetesdal/xwmt>`_

[options]
packages = find_namespace:
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    gsw
    numpy
    pandas
    xarray
    xgcm
    xhistogram
